# spellxpert

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/datasets/: cscd-ns-reasoning.json  cscd-ns.json  lemon-v2.json  stcn-g1.json  stcn-g2.json  stcn-reasoning.json  stcn.json  tianjindaily.json
csc/: __init__.py  evaluation.py  report.py  utils.py  verification.py
csc/data/: __init__.py  base.py  utils.py  verification.py
csc/data/datasets/: __init__.py  cscd_ns.py  lemon_v2.py  stcn.py
csc/datasets/: __init__.py  base.py  cscd_ns.py  cscd_ns_reasoning.py  detection.py  stcn.py  template.py  utils.py
csc/evaluation/: __init__.py  detection.py  template.py
scripts/datasets/: detection.py  generate-data-from-api.py  make-dataset.py  process-data.py  verification.py
scripts/evaluation/: .gitignore  evaluate.py  extract-dataset-from-generated-predictions.py  extract-false-negatives.py  filter-detection-results.py  split-consecutive-errors.py
scripts/experiment-logs/: .gitignore  generate-log-entry.py  log-entries.py
scripts/inference/: vllm-infer.py  vllm_infer.py
scripts/verification/: extract-verification-dataset.py  verify.py
verification/: get_corrections.py  get_domain.py  get_output.py  get_wrong_chars.py  main_correct.py  main_cot.py
verification/correct/: correct_part1.py  correct_part2.py  data_clear.py
verification/correct_cot/: cot.json  cot.py  csc_mes.json  csc_mes.py  extract_test.json  get_cleared_data.py  get_corrections.py  get_domain.py  get_output.py  get_wrong_chars.py  main_correct.py  main_cot.py
(+12 files in other folders)
